Fixing texting spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -58,7 +58,7 @@ img {
 }
 
 header {
-  background-color: rgba(255, 255, 255, .9);
+  background-color: rgba(255, 255, 255, 1);
   width: 100%;
   height: 76px;
   position: fixed;
@@ -293,8 +293,10 @@ section.module.parallax-1 {
   }
 
   .portfolio-description{
-    width: 100%;
-    background-color: #F5F5F5;
+    width: 75%;
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
     height: auto;
     padding: 1em;
   }
@@ -312,6 +314,7 @@ section.module.parallax-1 {
     color: #333;
     height: auto;
     font-weight: 300;
+    line-height: 1.5em;
   }
 
    .close img{
@@ -328,7 +331,6 @@ section.module.parallax-1 {
     /*  SLIDER */
 
       .flexslider{
-        width: 100%;
         display: block;
         border: none;
       }
@@ -406,14 +408,26 @@ section.module.parallax-1 {
     position: relative;
   }
 
+  .icons-border{
+    display: block;
+    width: 80px;
+    height: 3px;
+    background: #333;
+    opacity: 0.8;
+    margin: 0 auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
   .icons figcaption{
     position: absolute;
     width: 100%;
     text-align: left;
     background-color: rgba(255, 255, 255, 0.8);
     opacity: 0;
-    padding: 10px;
+    padding: 1em;
     font-size: 1em;
+    line-height: 1.5em;
     font-weight: 300;
     color: #333;
   }
@@ -464,6 +478,10 @@ section.module.parallax-1 {
   .services-icons img:hover{
     opacity: 1;
   }
+
+  @media only screen and (max-width : 38em) {
+  }
+
   /* END - ICONS */
 
 /* END - SERVICES */
@@ -474,7 +492,7 @@ section.module.parallax-1 {
   background-image:  url("../img/about-background.png");
   min-height: 500px;
   display: block;
-  padding-top: 3.125em;
+  padding-top: 4.5em;
   padding-bottom: 3.125em;
 }
 
@@ -515,14 +533,21 @@ section.module.parallax-1 {
   .meet-emma p{
     text-align: center;
     color: #FFF;
-    padding: 10px;
+    padding: 1em;
     font-weight: 100;
+    line-height: 1.5em;
   }
 
       @media only screen and (max-width : 38em) {
-        .meet-emma{
+      .meet-emma{
         width: 100%;
         padding: 5px;
+      }
+
+      .picture{
+        max-width: 33%;
+        margin-left: auto;
+        margin-right: auto;
       }
   }
   /* END - MEET EMMA */
